--- a/bolum2/addingNewTask.html
+++ b/bolum2/addingNewTask.html
@@ -70,9 +70,12 @@
         { id: 3, gorevAdi: "Görev 3" },
       ];
 
-      let txtTask = document.querySelector("#txtTaskName");
+      const txtTask = document.querySelector("#txtTaskName");
+      const btnClear = document.querySelector("#btnClear");
+
       let editId;
       let isEditTask = false;
+
       displayText();
 
       function displayText() {
@@ -171,6 +174,11 @@
           txtTask.focus();
           txtTask.classList.add("active");
       }
+
+      btnClear.addEventListener("click", function(){
+          gorevListesi.splice(0, gorevListesi.length);
+          displayText();
+      })
     </script>
   </body>
 </html>
