--- a/bolum2/gorevListesi.html
+++ b/bolum2/gorevListesi.html
@@ -13,11 +13,11 @@
       rel="stylesheet"
     />
     <style>
-      .dropdown-toggle::after{
+      .dropdown-toggle::after {
         display: none;
       }
 
-      .task{
+      .task {
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -60,9 +60,7 @@
         </div>
       </div>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
       let gorevListesi = [
         { id: 1, gorevAdi: "Görev 1" },
@@ -79,12 +77,14 @@
       displayText();
 
       function displayText() {
-
         let ul = document.getElementById("task-list");
         ul.innerHTML = "";
 
-        for (const gorev of gorevListesi) {
-          let li = ` <li class="task list-group-item">
+        if (gorevListesi.length == 0) {
+          ul.innerHTML = "<p class='p-3 m-0'>Görev Listesi Boş!</p>";
+        } else {
+          for (const gorev of gorevListesi) {
+            let li = ` <li class="task list-group-item">
                             <div class="form-check">
                                 <input type="checkbox"  id="${gorev.id}" class="form-check-input">
                                 <label for="${gorev.id}" class="form-chech-label">
@@ -105,7 +105,8 @@
 
                     `;
 
-          ul.insertAdjacentHTML("beforeend", li);
+            ul.insertAdjacentHTML("beforeend", li);
+          }
         }
       }
 
@@ -121,27 +122,25 @@
       //   .addEventListener("click", gorevTemizle);
 
       function gorevEkle(event) {
-
         if (txtTask.value == "") {
           alert("Bir değer girmelisiniz.");
         } else {
-
           if (!isEditTask) {
             //Ekleme
             gorevListesi.push({
-            id: gorevListesi.length + 1,
-            gorevAdi: txtTask.value,
-          });
+              id: gorevListesi.length + 1,
+              gorevAdi: txtTask.value,
+            });
           } else {
             //Güncelleme
-            for(let gorev of gorevListesi){
+            for (let gorev of gorevListesi) {
               if (gorev.id == editId) {
                 gorev.gorevAdi = txtTask.value;
               }
               isEditTask = false;
             }
           }
-          
+
           txtTask.value = "";
           displayText();
         }
@@ -150,7 +149,6 @@
       }
 
       function deleteTask(id) {
-
         let deletedId;
         // for(let index in gorevListesi){
         //   if(gorevListesi[index].id == id){
@@ -161,24 +159,24 @@
         //   return gorev.id == id;
         // })
 
-        deletedId = gorevListesi.findIndex(gorev => gorev.id == id);
+        deletedId = gorevListesi.findIndex((gorev) => gorev.id == id);
 
         gorevListesi.splice(deletedId, 1);
         displayText();
       }
 
-      function updateTask(id, ad){
-          editId = id;
-          isEditTask = true;
-          txtTask.value = ad;
-          txtTask.focus();
-          txtTask.classList.add("active");
+      function updateTask(id, ad) {
+        editId = id;
+        isEditTask = true;
+        txtTask.value = ad;
+        txtTask.focus();
+        txtTask.classList.add("active");
       }
 
-      btnClear.addEventListener("click", function(){
-          gorevListesi.splice(0, gorevListesi.length);
-          displayText();
-      })
+      btnClear.addEventListener("click", function () {
+        gorevListesi.splice(0, gorevListesi.length);
+        displayText();
+      });
     </script>
   </body>
 </html>
