--- a/bolum2/gorevListesi.html
+++ b/bolum2/gorevListesi.html
@@ -22,6 +22,10 @@
         align-items: center;
         justify-content: space-between;
       }
+
+      .task label.checked{
+        text-decoration: line-through;
+      }
     </style>
     <title>Document</title>
   </head>
@@ -86,8 +90,8 @@
           for (const gorev of gorevListesi) {
             let li = ` <li class="task list-group-item">
                             <div class="form-check">
-                                <input type="checkbox"  id="${gorev.id}" class="form-check-input">
-                                <label for="${gorev.id}" class="form-chech-label">
+                                <input type="checkbox"  id="${gorev.id}" class="form-check-input checked">
+                                <label for="${gorev.id}" class="form-chech-label checked">
                                     ${gorev.gorevAdi}
                                 </label>
                             </div>
