--- a/bolum2/gorevListesi.html
+++ b/bolum2/gorevListesi.html
@@ -67,9 +67,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
       let gorevListesi = [
-        { id: 1, gorevAdi: "Görev 1" },
-        { id: 2, gorevAdi: "Görev 2" },
-        { id: 3, gorevAdi: "Görev 3" },
+        { id: 1, gorevAdi: "Görev 1", durum: "completed" },
+        { id: 2, gorevAdi: "Görev 2", durum: "pending" },
+        { id: 3, gorevAdi: "Görev 3", durum: "completed" },
+        { id: 4, gorevAdi: "Görev 4", durum: "pending" }
       ];
 
       const txtTask = document.querySelector("#txtTaskName");
@@ -88,10 +89,15 @@
           ul.innerHTML = "<p class='p-3 m-0'>Görev Listesi Boş!</p>";
         } else {
           for (const gorev of gorevListesi) {
+
+            let completed = gorev.durum == "completed" ? "checked" : "";
+
+
+
             let li = ` <li class="task list-group-item">
                             <div class="form-check">
-                                <input type="checkbox"  id="${gorev.id}" class="form-check-input checked">
-                                <label for="${gorev.id}" class="form-chech-label checked">
+                                <input type="checkbox"  onclick = "updateStatus(this)" id="${gorev.id}" class="form-check-input" ${completed}>
+                                <label for="${gorev.id}" class="form-chech-label ${completed}">
                                     ${gorev.gorevAdi}
                                 </label>
                             </div>
@@ -181,6 +187,28 @@
         gorevListesi.splice(0, gorevListesi.length);
         displayText();
       });
+
+      function updateStatus(selectedTask){
+          //console.log(selectedTask.nextElementSibling);
+
+          let label = selectedTask.nextElementSibling;
+          let durum;
+          if(selectedTask.checked){
+            label.classList.add("checked");
+            durum = "completed";
+          }else{
+            label.classList.remove("checked");
+            durum = "pending";
+          }
+
+          for(let gorev of gorevListesi){
+            if(gorev.id == selectedTask.id){
+              gorev.durum = durum;
+            }
+          }
+
+          console.log(gorevListesi);
+      }
     </script>
   </body>
 </html>
