--- a/bolum2/gorevListesi.html
+++ b/bolum2/gorevListesi.html
@@ -238,6 +238,8 @@
             gorev.durum = durum;
           }
         }
+        displayText(document.querySelector("span.active").id);
+
         localStorage.setItem("gorevListesi", JSON.stringify(gorevListesi));
       }
     </script>
